--- a/kleisli.tex
+++ b/kleisli.tex
@@ -9,8 +9,8 @@ construct a new category $\cat{C_M}$ as follows:
 \begin{eqnarray}
 \catob{C_M} = \catob{C},
 \nonumber \\
-\hom_{\cat{C_M}}\left(a, b\right) = 
-\hom_{\cat{C}}\left(a, M(b)\right)
+\catmset[C_M]{a}{b} =
+\catmset[C]{a}{M(b)} 
 \nonumber
 \end{eqnarray}
 i.e. objects of categories $\cat{C}$ and $\cat{C_M}$ are the same but
