--- a/monads.tex
+++ b/monads.tex
@@ -496,7 +496,7 @@ $\mathcal{A}$ and $\mathcal{B}$ there is a natural isomorphism between
 the tensor product and \mynameref{def:linear_map}s (aka morphisms) between
 $\mathcal{A}$ and $\mathcal{B}$:
 \[
-\mathcal{A}^\ast \otimes \mathcal{B} \cong \hom(\mathcal{A}, \mathcal{B})
+\mathcal{A}^\ast \otimes \mathcal{B} \cong \catmset{\mathcal{A}}{\mathcal{B}}
 \]
 where $\mathcal{A}^\ast$ - \mynameref{def:dual_space}.
 \end{remark}
