--- a/yoneda.tex
+++ b/yoneda.tex
@@ -115,10 +115,6 @@ interested in the following sets of morphisms:
 \nonumber
 \end{eqnarray}
 
-The corresponding
-objects in the \mynameref{def:setcategory} is described in the \cref{fig:cov_hom_functor_set}
-TBD
-
   \begin{figure}
     \centering
     \begin{tikzpicture}[ele/.style={fill=black,circle,minimum
@@ -157,6 +153,22 @@ TBD
     \caption{Covariant Hom functor $\catcovhom{C}{a}$ example. Category $\cat{Set}$}
     \label{fig:cov_hom_functor_set}
   \end{figure}
+
+The corresponding
+objects in the \mynameref{def:setcategory} is described in the
+\cref{fig:cov_hom_functor_set}: 
+\begin{eqnarray}
+a' = \catmset[C]{a}{a} = \{\idm{a}\},
+\nonumber \\
+b' = \catmset[C]{a}{b} = \{f_1^{(b)}, f_2^{(b)}\}, 
+\nonumber \\
+c' = \catmset[C]{a}{c} = \{f_1^{(c)}, f_2^{(c)}, g_1, g_2\}, 
+\nonumber \\
+d' = \catmset[C]{a}{d} = \emptyset.
+\nonumber
+\end{eqnarray}
+TBD
+
 
 \end{example}
 
