--- a/yoneda.tex
+++ b/yoneda.tex
@@ -114,6 +114,7 @@ interested in the following sets of morphisms:
 \catmset[C]{a}{d} = \emptyset.
 \nonumber
 \end{eqnarray}
+There is also a single \mynameref{def:morphism} $f$ between $b$ and $a$.
 
   \begin{figure}
     \centering
