--- a/basedefinitions.tex
+++ b/basedefinitions.tex
@@ -531,6 +531,17 @@ The \textit{singleton} is a \mynameref{def:set} with only one element.
   $\cod f = Y$
 \end{example}
 
+\begin{definition}[Image]
+\label{def:function_image} 
+The \textit{image} of a function $f: X \to Y$ is a subset of
+\mynameref{def:codomain} $Y$ such that for every element in the subset
+there is an element in \mynameref{def:domain} $X$ that maps into the
+subset:
+\[
+\Ima{f} = \{y \in Y| y = f(x) \mbox{ for some } x \in X\}
+\]
+\end{definition}
+
 
 \begin{definition}[Surjection]
   \label{def:surjection}
