--- a/notations.tex
+++ b/notations.tex
@@ -1,5 +1,7 @@
 %% -*- coding:utf-8 -*-
 \renewcommand{\nomname}{Notations}
+\nomenclature{$\Ima{f}$}{\mynameref{def:function_image} of the
+  function $f$}
 \nomenclature{$\cat{Set}$}{\mynameref{def:setcategory}}
 \nomenclature{$\cat{Rel}$}{\mynameref{def:relcategory}}
 \nomenclature{$\cat{Proof}$}{\mynameref{def:proof_category}}
