--- a/yoneda.tex
+++ b/yoneda.tex
@@ -109,7 +109,8 @@ interested in the following sets of morphisms:
 \nonumber \\
 \catmset[C]{a}{b} = \{f_1^{(b)}, f_2^{(b)}\}, 
 \nonumber \\
-\catmset[C]{a}{c} = \{f_1^{(c)}, f_2^{(c)}, g_1, g_2\}, 
+\catmset[C]{a}{c} = \{f_1^{(c)}, f_2^{(c)}, g_1 = f \circ f_1^{(b)},
+g_2 = f \circ f_2^{(b)}\}, 
 \nonumber \\
 \catmset[C]{a}{d} = \emptyset.
 \nonumber
@@ -303,7 +304,8 @@ interested in the following sets of morphisms:
 \nonumber \\
 \catmset[D]{b}{a} = \{h_1^{(b)}, h_2^{(b)}\}, 
 \nonumber \\
-\catmset[D]{c}{a} = \{h_1^{(c)}, h_2^{(c)}, g_1, g_2\}, 
+\catmset[D]{c}{a} = \{h_1^{(c)}, h_2^{(c)}, g_1 = h_1^{(b)} \circ h,
+g_2  = h_2^{(b)} \circ h\}, 
 \nonumber \\
 \catmset[D]{d}{a} = \emptyset.
 \nonumber
