contravariant hom functor example

--- a/yoneda.tex
+++ b/yoneda.tex
@@ -93,7 +93,8 @@ The \textit{covariant Hom functor} is denoted as $\catcovhom{C}{a}$.
         height=5.5cm] {} ;
 
     \end{tikzpicture}
-    \caption{Covariant Hom functor $\catcovhom{C}{a}$ example. Category $\cat{C}$}
+    \caption{Covariant Hom functor $\catcovhom{C}{a}$ example.
+      Category $\cat{C}$} 
     \label{fig:cov_hom_functor}
   \end{figure}
 Consider category $\cat{C}$ in the \cref{fig:cov_hom_functor}. It
@@ -225,6 +226,9 @@ Let $\cat{C}$ is a \mynameref{def:localy_small_category} and $a \in
 The \textit{contravariant Hom functor} is denoted as $\catconhom{C}{a}$.
 \end{definition}
 
+From the definition of \mynameref{def:contravariant_functor} follows
+that we can get it simply reverting arrows in the initial category. 
+Lets do it for \cref{ex:cov_hom_functor} as follows
 \begin{example}[Contravariant Hom functor]
 \label{ex:con_hom_functor}
   \begin{figure}
