--- a/nt.tex
+++ b/nt.tex
@@ -189,6 +189,15 @@ We use the following notation (arrow with a dot) for the natural transformation 
 functors $F$ and $G$: $\alpha: F \tont G$. 
 \end{definition}
 
+
+\begin{definition}[Natural isomorphism]
+\label{def:ni}
+The \mynameref{def:nt} $\alpha: F \tont G$ is called \textit{natural
+  isomorphism} if all morphisms $\alpha \subset \cathom{D}$ are
+\mynameref{def:isomorphism}s in $\cat{D}$ 
+\end{definition}
+
+
 \section{Category of functors}
 
 The functors can be considered as objects in a special category
