--- a/yoneda.tex
+++ b/yoneda.tex
@@ -427,9 +427,9 @@ The functor $F: \cat{C} \tof \cat{Set}$ is called
 \mynameref{def:ni}) to $\catcovhom{C}{a}$ for some object $a \in
 \catob{C}$. 
 
-\textit{Representation} of $F$ is a pair $(a, \phi)$ where
+\textit{Representation} of $F$ is a pair $(a, \alpha)$ where
 \[
-\phi: \catcovhom{C}{a} \tont F
+\alpha: \catcovhom{C}{a} \tont F
 \]
 is a \mynameref{def:ni}.
 \end{definition}
