--- a/notations.tex
+++ b/notations.tex
@@ -47,6 +47,8 @@
 \nomenclature{$\idnt{F}$}{\mynameref{def:idnt}}
 \nomenclature{$a \cong_f b$}{there is an \mynameref{def:isomorphism} $f$
   between $a$ and $b$} 
+\nomenclature{$a \cong b$}{there is an \mynameref{def:isomorphism} 
+  between $a$ and $b$. The exact isomorphism does not matter in the case} 
 \nomenclature{$\left<M, \mu, \eta\right>$}{\mynameref{def:monad}}
 \nomenclature{$\cat{C_M}$}{\mynameref{def:kleisli_category}}
 \nomenclature{$\catmset{a}{b}$}{\mynameref{def:morphism_set} between $a$ and $b$}
