yoneda lemma definition

--- a/cattheory.tex
+++ b/cattheory.tex
@@ -333,6 +333,10 @@
   \mathrm{Hom}_{#1}\left(-, #2\right)%
 }
 
+\newcommand {\funcat} [2] {%
+  [\cat{#1}, \cat{#2}]%
+}
+
 
 \DeclareMathOperator{\dom}{dom}
 \DeclareMathOperator{\cod}{cod}
