--- a/notations.tex
+++ b/notations.tex
@@ -37,7 +37,7 @@
  (Greek small letters)}
 \nomenclature{$\alpha: F \tont G$}{\mynameref{def:nt}
 (arrow with dot)}
-\nomenclature{$[\cat{C}, \cat{D}]$}{\mynameref{def:funcategory}}
+\nomenclature{$\funcat{C}{D}$}{\mynameref{def:funcategory}}
 \nomenclature{$\alpha \circ
   \beta$}{\mynameref{def:vertical_composition} of natural
   transformations (circle dot)}
