--- a/nt.tex
+++ b/nt.tex
@@ -330,7 +330,7 @@ contains functors $F: \cat{C} \tof \cat{D}$ as objects and
   category}. The morphism composition is the
 \mynameref{def:vertical_composition} in the category.  The \textit{functor
 category} between categories $\cat{C}$ and $\cat{D}$ is denoted as
-$[\cat{C}, \cat{D}]$. 
+$\funcat{C}{D}$. 
 \end{definition}
 
 Uniqueness of \mynameref{def:nt} is the same to uniqueness of morphisms in the
@@ -340,23 +340,23 @@ examples for initial and terminal objects in \mynameref{def:funcategory}.
 
 \begin{example}[Terminal object][$\cat{Fun}$]
   \label{ex:terminal_object_fun}
-  Let $[\cat{C}, \cat{D}]$ is the functor category between $\cat{C}$
+  Let $\funcat{C}{D}$ is the functor category between $\cat{C}$
   and $\cat{D}$. If $t \in \catob{D}$ is the
   \mynameref{def:terminal_object} in the category $\cat{D}$ then 
   the 
   \mynameref{def:const_functor} $\Delta_t$ is the
-  \mynameref{def:terminal_object} in the category $[\cat{C}, \cat{D}]$
+  \mynameref{def:terminal_object} in the category $\funcat{C}{D}$
   \cite{bib:stackexchange:initial_terminal_in_fun_category}. 
 \end{example}
 
 \begin{example}[Initial object][$\cat{Fun}$]
   \label{ex:initial_object_fun}
-  Let $[\cat{C}, \cat{D}]$ is the functor category between $\cat{C}$
+  Let $\funcat{C}{D}$ is the functor category between $\cat{C}$
   and $\cat{D}$. If $i \in \catob{D}$ is the
   \mynameref{def:initial_object} in the category $\cat{D}$ then 
   the 
   \mynameref{def:const_functor} $\Delta_i$ is the
-  \mynameref{def:initial_object} in the category $[\cat{C}, \cat{D}]$
+  \mynameref{def:initial_object} in the category $\funcat{C}{D}$
   \cite{bib:stackexchange:initial_terminal_in_fun_category}. 
 \end{example}
 
