--- a/yoneda.tex
+++ b/yoneda.tex
@@ -522,7 +522,17 @@ Thus we can define the logarithm operation for a
 
 \section{Yoneda's lemma}
 
+\begin{lemma}[Yoneda]
+\label{lem:yoneda}
+Let $\cat{C}$ is a \mynameref{def:localy_small_category} and $F$ is a
+functor from $\cat{C}$ to $\cat{Set}$. Then
+\[
+\catmset[\funcat{C}{Set}]{\catcovhom{c}{a}}{F} \cong F(a)
+\]
+\begin{proof}
 TBD
+\end{proof}
+\end{lemma}
 
 \section{Examples}
 
