--- a/cattheory.tex
+++ b/cattheory.tex
@@ -323,6 +323,11 @@
 }
 
 
+\NewDocumentCommand{\catmsetfig}{m m m}{%
+\catmset[#1]{#2}{#3}
+}
+
+
 % Covariant Hom functor
 \newcommand {\catcovhom} [2] {%
   \mathrm{Hom}_{\cat{#1}}\left(#2, -\right)%
